Disable webkit specific look on submit buttons on iOS (fixes #825) (Closes #827)

--- a/src/button/_button.scss
+++ b/src/button/_button.scss
@@ -74,6 +74,9 @@
   }
 }
 
+input.mdl-button[type="submit"] {
+  -webkit-appearance:none;
+}
 
   // Raised buttons
   .mdl-button--raised {
